--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://pascalmichaillat.org/hugo-website/" 
+baseURL: "https://eric-taylor-geo.github.io/" 
 title: Eric Taylor
 theme: PaperMod
 
