--- a/config.yml
+++ b/config.yml
@@ -74,7 +74,7 @@ params:
           url: mailto:elt25@ic.ac.uk
         - name: GitHub
           url: https://github.com/eric-taylor-geo
-        - name: X
+        - name: Twitter
           url: https://x.com/EricLTaylor_
         - name: LinkedIn
           url: https://www.linkedin.com/in/eric-taylor-8a82a4201/
